generate/testdata/errors/InvalidQuery.go
package errors

const _ = `# @genqlient
	query MyQuery { g }
`
